<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.ezpass.smopaye_tpe2.Assistance.DetailsAgenceSmopaye">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:padding="15dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/yellow"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="40"
                android:src="@drawable/logo2"/>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ville"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:text="@string/yde"
                    android:textStyle="bold" />

            </LinearLayout>



        </LinearLayout>



        <LinearLayout
            android:focusable="true"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ripple_effect_click"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:showDividers="end"
            android:divider="@color/textColorBlack"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/textColorBlack"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/adresse"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/adresseV"/>
        </LinearLayout>

        <LinearLayout
            android:focusable="true"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ripple_effect_click"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:showDividers="end"
            android:divider="@color/textColorBlack"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/textColorBlack"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/services"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/servicesV"/>
        </LinearLayout>

        <LinearLayout
            android:focusable="true"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ripple_effect_click"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:showDividers="end"
            android:divider="@color/textColorBlack"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/textColorBlack"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/horaire"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/horaireV"/>
        </LinearLayout>



    </LinearLayout>

</LinearLayout>